# cFMS

./: .gitignore  .gitmodules  Makefile.am  configure.ac
.github/workflows/: github_autotools_gnu.yaml  test.sh
c_constants/: Makefile.am  c_constants.F90  c_constants.h
c_data_override/: Makefile.am  c_data_override.h
c_data_override/include/: c_data_override_2d.inc  c_data_override_3d.inc
c_diag_manager/: Makefile.am  c_diag_manager.F90  c_diag_manager.h
c_diag_manager/include/: c_send_data.inc
c_fms/: Makefile.am  c_fms.F90  c_fms.h
c_fms/include/: c_mpp_gather.fh  c_mpp_gather.inc  c_update_domains.inc  c_vector_update_domains.inc
c_fms_utils/: Makefile.am  c_fms_utils.F90
c_fms_utils/include/: array_to_pointer.fh  array_to_pointer.inc  clogical.inc  pointer_to_array.fh  pointer_to_array.inc
c_grid_utils/: Makefile.am
c_horiz_interp/: Makefile.am  c_horiz_interp.F90  c_horiz_interp.h
c_horiz_interp/include/: c_get_interp.fh  c_get_interp.inc  c_get_interp_cdouble.inc  c_horiz_interp_base.fh  c_horiz_interp_base.inc  c_horiz_interp_get_weights.fh  c_horiz_interp_get_weights.inc  c_horiz_interp_int.inc  c_horiz_interp_new.inc  c_horiz_interp_read_weights_conserve.inc
conda.recipe/: Makefile  build.sh  conda_build_config.yaml  meta.yaml  run_tests.sh
libcFMS/: Makefile.am
m4/: gx_lib_fms.m4
test_cfms/c_data_override/: Makefile.am  test_data_override.c  test_data_override_2d.c  test_data_override_3d.c
test_cfms/c_diag_manager/: Makefile.am  test_send_data.c
test_cfms/c_fms/: Makefile.am  c_mpp_domains_helper.c  c_mpp_domains_helper.h  test_cfms.c  test_cfms.sh  test_define_cubic_mosaic.c  test_define_cubic_mosaic.sh  test_define_domains.c  test_gather.c  test_gather.sh  test_getset_domains.c  test_update_domains.c  test_vector_update_domains.c
test_cfms/c_fms_utils/: Makefile.am  test_clogical.F90  test_clogical.sh  test_utils.F90  test_utils_c.c
test_cfms/c_grid_utils/: Makefile.am
test_cfms/c_horiz_interp/: Makefile.am  test_construct_interp.c  test_create_xgrid.c  test_horiz_interp.c  test_horiz_interp.sh  test_horiz_interp_base.c  test_horiz_interp_new.c  test_read_weights_conserve.c
